--- a/Starting website 2/index.html
+++ b/Starting website 2/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="FR">
+<html lang="Default">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="">
-	<meta name="robots" content="index, follow">
+	
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -14,11 +14,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script async src="./js/jquery-2.1.0.js"></script>
-	<script async src="./js/bootstrap.js"></script>
-	<script async src="./js/blocs.js"></script>
-	<script async src="./js/jquery.touchSwipe.js" defer></script>
-	<script async src="./js/gmaps.js"></script>
+	<script  src="./js/jquery-2.1.0.js"></script>
+	<script  src="./js/bootstrap.js"></script>
+	<script  src="./js/blocs.js"></script>
+	<script  src="./js/jquery.touchSwipe.js" defer></script>
+	<script  src="./js/gmaps.js"></script>
 
     <title>.</title>
 
