--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<script  src="./js/jquery.touchSwipe.js" defer></script>
 	<script  src="./js/gmaps.js"></script>
 
-    <title>.</title>
+    <title>Agence La Panthère -  Design Web UI / UX</title>
 
     
 <!-- Analytics -->
