--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
-	<script defer src="./js/jquery-2.1.0.js"></script>
-	<script defer src="./js/bootstrap.js"></script>
-	<script defer src="./js/blocs.js"></script>
-	<script defer src="./js/jquery.touchSwipe.js"></script>
-	<script defer src="./js/gmaps.js"></script>
 
     <title>Agence La Panthère -  Design Web UI / UX</title>
 
@@ -303,6 +298,13 @@ gtag('config', 'G-L3KBJT9395');
 
 	</div>
 	<!-- Principal conteneur END -->
+	
+	<!-- Script JS -->
+	<script defer src="./js/jquery-2.1.0.js"></script>
+	<script defer src="./js/bootstrap.js"></script>
+	<script defer src="./js/blocs.js"></script>
+	<script defer src="./js/jquery.touchSwipe.js"></script>
+	<script defer src="./js/gmaps.js"></script>
 		
 
 </body>
