--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 						</a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span><span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
 					</div>
