--- a/index.html
+++ b/index.html
@@ -298,11 +298,11 @@
 	<!-- Principal conteneur END -->
 	
 	<!-- Script JS -->
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer ></script>
-	<script src="./js/gmaps.js"></script>
+	<script  async src="./js/jquery-2.1.0.js"></script>
+	<script  async src="./js/bootstrap.js"></script>
+	<script  async src="./js/blocs.js"></script>
+	<script  async src="./js/jquery.touchSwipe.js"></script>
+	<script  async src="./js/gmaps.js"></script>
 		
 
 </body>
