--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 				<div class="container bloc-md">
 					<div class="row">
-						<h2 class="col-sm-12 text-center">
+						<h2 class="col-sm-12 text-center section-title">
 							L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.
 						</h2>
 					</div>
