add aria-label for url and icons

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
 							<li>
-								<a href="contact.html">Contact</a>
+								<a href="contact.html" aria-label="Bouton : aller à la page contact">Contact</a>
 							</li>
 						</ul>
 					</div>
@@ -75,7 +75,7 @@
 								Agence La Panthère
 							</h1>
 							<div class="text-center">
-								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" aria-label="Bouton : aller à la page contact">Contact</a>
 							</div>
 						</div>
 					</div>
@@ -94,7 +94,7 @@
 					<div class="row voffset-lg med-width-whitespace">
 						<article class="col-sm-4">
 							<div class="text-center">
-								<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+								<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" aria-label="Icon d'une page web"></span>
 							</div>
 							<h3 class="mg-md text-center">
 								Web design
@@ -105,7 +105,7 @@
 						</article>
 						<article class="col-sm-4">
 							<div class="text-center">
-								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" aria-label=" Icon d'écran avec une flêche"></span>
 							</div>
 							<h3 class="mg-md text-center">
 								Stratégie
@@ -116,7 +116,7 @@
 						</article>
 						<article class="col-sm-4">
 							<div class="text-center">
-								<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+								<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" aria-label="Icon d'un crayon dans un carré"></span>
 							</div>
 							<h3 class="mg-md text-center">
 								Illustrations
@@ -145,7 +145,8 @@
 								Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .
 							</h2>
 							<p class="text-center white">
-								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
+								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br>
+								<a class="ltc-white bold-link" href="contact.html" aria-label="Bouton : aller à la page contact">Contactez notre équipe</a><br>
 							</p>
 						</div>
 					</div>
@@ -215,7 +216,7 @@
 							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 						</h2>
 						<div class="col-sm-12 text-center">
-							<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+							<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" aria-label="Bouton : aller à la page contact">Contact</a>
 						</div>
 					</div>
 				</div>
