--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					<div class="row voffset-lg med-width-whitespace">
 						<article class="col-sm-4">
 							<div class="text-center">
-								<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" aria-label="Icon d'une page web"></span>
+								<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" aria-description="Icon d'une page web"></span>
 							</div>
 							<h3 class="mg-md text-center">
 								Web design
@@ -105,7 +105,7 @@
 						</article>
 						<article class="col-sm-4">
 							<div class="text-center">
-								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" aria-label=" Icon d'écran avec une flêche"></span>
+								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" aria-description=" Icon d'écran avec une flêche"></span>
 							</div>
 							<h3 class="mg-md text-center">
 								Stratégie
@@ -116,7 +116,7 @@
 						</article>
 						<article class="col-sm-4">
 							<div class="text-center">
-								<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" aria-label="Icon d'un crayon dans un carré"></span>
+								<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" aria-description="Icon d'un crayon dans un carré"></span>
 							</div>
 							<h3 class="mg-md text-center">
 								Illustrations
