--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								Agence La Panthère
 							</h1>
 							<div class="text-center">
-								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" aria-label="Bouton : aller à la page contact">Contact</a>
+								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 							</div>
 						</div>
 					</div>
@@ -94,7 +94,7 @@
 					<div class="row voffset-lg med-width-whitespace">
 						<article class="col-sm-4">
 							<div class="text-center">
-								<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" aria-description="Icon d'une page web"></span>
+								<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 							</div>
 							<h3 class="mg-md text-center">
 								Web design
@@ -105,7 +105,7 @@
 						</article>
 						<article class="col-sm-4">
 							<div class="text-center">
-								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" aria-description=" Icon d'écran avec une flêche"></span>
+								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" ></span>
 							</div>
 							<h3 class="mg-md text-center">
 								Stratégie
