remove aria-description

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						</article>
 						<article class="col-sm-4">
 							<div class="text-center">
-								<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" aria-description="Icon d'un crayon dans un carré"></span>
+								<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" ></span>
 							</div>
 							<h3 class="mg-md text-center">
 								Illustrations
