--- a/index.html
+++ b/index.html
@@ -265,11 +265,11 @@
 	<!-- Principal conteneur END -->
 	
 	<!-- Script JS -->
-	<script  async src="./js/jquery-2.1.0.js"></script>
+	<!-- <script  async src="./js/jquery-2.1.0.js"></script> -->
 	<script  async src="./js/bootstrap.js"></script> 
-	<script  async src="./js/blocs.js"></script> 
+	<!--<script  async src="./js/blocs.js"></script>  -->
 	<!-- <script  async src="./js/jquery.touchSwipe.js"></script> -->
-	<!-- <script  async src="./js/gmaps.js"></script> -->
+	<script  defer src="./js/gmaps.js"></script> 
 		
 
 </body>
