--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
-							<img src="img/logo.png" class="center-block image-resize-mode"  alt="Logo, La Panthère" />
+							<img src="img/logo.png" class="center-block image-resize-mode panthere-head"  alt="Logo, La Panthère" />
 							<h1 class="text-center hero-bloc-text tc-white ">
 								Agence La Panthère
 							</h1>
