--- a/index.html
+++ b/index.html
@@ -230,28 +230,28 @@
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center white">
+						<p class="text-center footer-paragraph">
 							Agence La Panthère - Agence web basée à Lyon.<br>
 						</p>
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://twitter.com/?lang=fr" aria-label="Twitter"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="https://twitter.com/?lang=fr" target="_blank" aria-label="Twitter"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://www.facebook.com/" aria-label="Facebook"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="https://www.facebook.com/" target="_blank" aria-label="Facebook"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://dribbble.com/" aria-label="Dribble"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="https://dribbble.com/" target="_blank" aria-label="Dribble"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://www.instagram.com/" aria-label="Instagram"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" href="https://www.instagram.com/" target="_blank" aria-label="Instagram"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 						</div>
@@ -264,7 +264,7 @@
 	</div>
 	<!-- Principal conteneur END -->
 	
-	<!-- Script JS -->
+	<!-- Script -->
 	<!-- <script  async src="./js/jquery-2.1.0.js"></script> -->
 	<script  async src="./js/bootstrap.js"></script> 
 	<!--<script  async src="./js/blocs.js"></script>  -->
