--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<nav class="navbar row">
 					<div class="navbar-header">
 						<a class="navbar-brand" href="index.html">
-							<img  class="logopanthere" src="img/agence-la-panthere-monochrome.svg" alt="La Panthère - Agence de web design" />
+							<img  class="logopanthere" src="img/agence-la-panthere-monochrome.svg" alt="La Panthère - Agence de web design">
 						</a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span>
@@ -70,7 +70,7 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
-							<img src="img/logo.png" class="center-block image-resize-mode panthere-head"  alt="Logo, La Panthère" />
+							<img src="img/logo.png" class="center-block image-resize-mode panthere-head"  alt="Logo, La Panthère">
 							<h1 class="text-center hero-bloc-text tc-white ">
 								Agence La Panthère
 							</h1>
@@ -166,7 +166,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Journaux colorés" class="img-responsive portfolio-thumb" /></a>
+							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Journaux colorés" class="img-responsive portfolio-thumb"></a>
 							<h3 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
 							</h3>
@@ -175,7 +175,7 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Une photographe prend une photo, avec son appareil sur un trépied." /></a>
+							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Une photographe prend une photo, avec son appareil sur un trépied."></a>
 							<h3 class="mg-md text-center">
 								Création d'un site web pour photographes
 							</h3>
@@ -186,7 +186,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Matérielle vidéo, bien organisée avant un voyage"/></a>
+							<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Matérielle vidéo, bien organisée avant un voyage"></a>
 							<h3 class="mg-md text-center">
 								Création d'un site internet pour un voyageur
 							</h3>
@@ -195,7 +195,7 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Fournitures de bureau posées, avec une tablette et un ordinateur" /></a>
+							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Fournitures de bureau posées, avec une tablette et un ordinateur"></a>
 							<h3 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
 							</h3>
