contact page SEO and Acces fix

--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@
 	<!-- Principal conteneur END -->
 	
 	<!-- Script -->
-	<!-- <script  async src="./js/jquery-2.1.0.js"></script> -->
+	<script  async src="./js/jquery-2.1.0.js"></script>
 	<script  async src="./js/bootstrap.js"></script> 
-	<!--<script  async src="./js/blocs.js"></script>  -->
-	<!-- <script  async src="./js/jquery.touchSwipe.js"></script> -->
+	<script  async src="./js/blocs.js"></script>
+	<script  async src="./js/jquery.touchSwipe.js"></script>
 	<script  defer src="./js/gmaps.js"></script> 
 		
 
