--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
     
 <!-- Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-L3KBJT9395"></script>
+<!--<script async src="https://www.googletagmanager.com/gtag/js?id=G-L3KBJT9395"></script>-->
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
@@ -174,8 +174,8 @@
 	<script src="./js/jquery-2.1.0.js" defer ></script>
 	<script src="./js/bootstrap.js" defer ></script> 
 	<script src="./js/blocs.js" defer ></script>
-	<script src="./js/jquery.touchSwipe.js" defer ></script>
-	<script src="./js/gmaps.js" defer ></script> 
+	<!--<script src="./js/jquery.touchSwipe.js" defer ></script>-->
+	<!--<script src="./js/gmaps.js" defer ></script> -->
 	
 	
     
