--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
 	<!-- Analytics -->
 	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-L3KBJT9395"></script>
+	<!--<script async src="https://www.googletagmanager.com/gtag/js?id=G-L3KBJT9395"></script>-->
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
@@ -265,11 +265,11 @@
 	<!-- Principal conteneur END -->
 	
 	<!-- Script -->
-	<script  async src="./js/jquery-2.1.0.js"></script>
-	<script  async src="./js/bootstrap.js"></script> 
-	<script  async src="./js/blocs.js"></script>
-	<script  async src="./js/jquery.touchSwipe.js"></script>
-	<script  defer src="./js/gmaps.js"></script> 
+	<script src="./js/jquery-2.1.0.js" defer></script>
+	<script src="./js/bootstrap.js" defer></script> 
+	<script src="./js/blocs.js" defer></script>
+	<!--<script src="./js/jquery.touchSwipe.js" defer></script>-->
+	<!--<script  defer src="./js/gmaps.js"></script> -->
 		
 
 </body>
