--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html" aria-label="Bouton : aller à la page d'acceuil">Acceuil</a>
+						<a href="index.html" aria-label="Bouton : aller à la page d'accueil">Accueil</a>
 					</li>
 				</ul>
 			</div>
